--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,51 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.parent{
+  position:relative;
+  margin:auto;
+  width: 1024px;
+  height: 551px;
+  }
+
+
+.cameraimg{
+  position:absolute;
+
+}
+.topleft {
+  position: absolute;
+  top: 20%;
+  left: 30%;
+}
+.topright {
+  position: absolute;
+  top: 20%;
+  right: 30%;
+}
+.bottomleft {
+  position: absolute;
+  bottom: 20%;
+  left: 30%;
+}
+.bottomright {
+  position: absolute;
+  bottom: 20%;
+  right: 30%;
+}
+.goalleft {
+  position: absolute;
+  bottom: 45%;
+  left: 15%;
+}
+.goalright {
+  position: absolute;
+  bottom: 45%;
+  right: 15%;
+}
+.buttonimg {
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+}
